Update dialog component with game logic for one type of message.

--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -1,3 +1,15 @@
 .dialog {
     top: 50%;
+    width: 25%;
+}
+
+.dialog > form {
+    display: flex;
+    flex-direction: column;
+}
+
+.dialog > form > button {
+    width: 25%;
+    margin: auto;
+    margin-top: 10px;
 }
