--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -1,15 +1,51 @@
 .dialog {
-    top: 50%;
-    width: 25%;
-}
+    top: 60%;
+    width: min(700px, 40%);
+    background-color: #0D0D0D;
+    color: #F2ECEB;
+    border-radius: 4px;
+    border-color: #A69898;
+    /* border: none; */
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  }
 
 .dialog > form {
     display: flex;
     flex-direction: column;
+    font-family: 'Mountains of Christmas', cursive;
+    font-size: 1.5em;
+    letter-spacing: .15rem;
 }
 
 .dialog > form > button {
-    width: 25%;
-    margin: auto;
-    margin-top: 10px;
+    background-color: #0D0D0D;
+    width: 40%;
+    margin: 0 auto;
+    color: #F2ECEB;
+    border: none;
+    padding: 10px 20px;
+    font-family: 'Mountains of Christmas', cursive;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.dialog > form > button {
+    animation: pulseAnimation 1.5s infinite;
+}
+
+.dialog > form > button:hover {
+    animation: none;
+    background-color: #59022B;
+}
+  
+@keyframes pulseAnimation {
+0% {
+    background-color: #0D0D0D;
+}
+50% {
+    background-color: #59022B;
+}
+100% {
+    background-color: #0D0D0D;
+}
 }
