--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -20,10 +20,11 @@
 .dialog > form > button {
     background-color: #0D0D0D;
     width: 40%;
-    margin: 0 auto;
     color: #F2ECEB;
     border: none;
     padding: 10px 20px;
+    margin: 0 auto;
+    margin-top: 10px;
     font-family: 'Mountains of Christmas', cursive;
     font-weight: bold;
     font-size: 18px;
