--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -1,32 +1,35 @@
 .dialog {
-    top: 60%;
-    width: min(700px, 40%);
+    top: 20%;
+    width: min(700px, 70%);
     background-color: #0D0D0D;
     color: #F2ECEB;
     border-radius: 4px;
     border-color: #A69898;
     /* border: none; */
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    text-align: justify;
   }
 
 .dialog > form {
     display: flex;
     flex-direction: column;
     font-family: 'Mountains of Christmas', cursive;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     letter-spacing: .15rem;
+    padding:10px;
 }
 
 .dialog > form > button {
     background-color: #0D0D0D;
-    width: 40%;
+    letter-spacing: 4px;
+    width:clamp(180px, 40%, 220px);
     color: #F2ECEB;
     border: none;
     padding: 10px 20px;
     margin: 0 auto;
     margin-top: 10px;
     font-family: 'Mountains of Christmas', cursive;
-    font-weight: bold;
+    font-weight: normal;
     font-size: 18px;
 }
 
