--- a/src/styles/interface.css
+++ b/src/styles/interface.css
@@ -9,3 +9,31 @@
     font-size: 1rem;
     z-index:999;
 }
+
+.titleScreenWrapper {
+    position:absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    font-family: 'Mountains of Christmas', cursive;
+    color:white;
+}
+
+.titleScreen {
+    display:block;
+    margin:20% auto;
+    width:600px;
+    text-align: center;
+}
+
+.titleScreen h1 {
+    font-size:48px;
+}
+
+.titleScreen button {
+    width:200px;
+    background:none;
+    color:white;
+    font-size:34px;
+}
