brightness bound to brightness slider, end game reload fixed

--- a/src/styles/interface.css
+++ b/src/styles/interface.css
@@ -39,7 +39,7 @@
     font-size:48px;
 }
 
-.titleScreen button {
+.titleScreen button, .titleScreen a  {
     width:200px;
     /* background:none; */
     background-color:darkred;
@@ -49,7 +49,7 @@
     border:1px solid firebrick;
 }
 
-.titleScreen button:hover, .menu button:hover {
+.titleScreen button:hover, .menu button:hover, .titleScreen a:hover, .menu a:hover {
     border:1px solid cornsilk;
     transform:translateY(4px);
     font-weight:700;
@@ -188,7 +188,7 @@ input[type=range][orient=vertical] {
     padding:32px 12px;
 }
 
-.menu button, .menu a {
+.menu button, .menu a, .titleScreen a {
     width: 200px;
     /* background: none; */
     background-color: darkred;
@@ -198,6 +198,10 @@ input[type=range][orient=vertical] {
     border: 1px solid firebrick;
     text-align: center;
     text-decoration: none;
+}
+.titleScreen a{
+    display:block;
+    margin: auto;
 }
 
 .brightness {
@@ -214,6 +218,7 @@ input[type=range][orient=vertical] {
       overflow: hidden;
       width: 200px;
       -webkit-appearance: none;
+      appearance: none;
       background-color: lightslategray;
       border:1px solid firebrick;
     }
@@ -233,3 +238,4 @@ input[type=range][orient=vertical] {
       background: black;
       box-shadow: -100px 0 0 100px darkred;
     }
+}
