--- a/src/styles/interface.css
+++ b/src/styles/interface.css
@@ -64,6 +64,7 @@
     display:flex;
     height:150px;
     gap:14px;
+    max-width: 300px;
 }
 
 .healthpointsWrapper svg {
@@ -78,6 +79,7 @@
     display:flex;
     height:150px;
     gap:14px;
+    max-width:400px;
 }
 
 .cluesWrapper svg {
