--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -1,21 +1,24 @@
 .dialog {
     top: 25%;
     width: min(700px, 70%);
-    background-color: #0D0D0D;
     color: #F2ECEB;
-    border-radius: 4px;
-    border-color: #A69898;
+    border:none;
     /* border: none; */
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 6px 10px 12px rgba(0, 0, 0, 0.2); */
     text-align: justify;
+    /* background-color: rgba(13,13,13, 0.6); */
+    /* backdrop-filter: blur(2px); */
+    /* box-shadow: rgb(30, 45, 61) 0px 8px 20px -10px; */
+    background: radial-gradient(ellipse at center, black 0%, black 35%, transparent 80%);
   }
 
 .dialog > form {
     display: flex;
     flex-direction: column;
-    font-family: 'Mountains of Christmas', cursive;
+    /* font-family: 'Mountains of Christmas', cursive; */
+    font-family:'Kalam', sans-serif;
     font-size: 1.5rem;
-    letter-spacing: .15rem;
+    /* letter-spacing: .15rem; */
     padding:10px;
 }
 
@@ -43,13 +46,49 @@
 }
   
 @keyframes pulseAnimation {
-0% {
-    background-color: #0D0D0D;
+    0% {
+        background-color: #0D0D0D;
+    }
+    50% {
+        background-color: #59022B;
+    }
+    100% {
+        background-color: #0D0D0D;
+    }
 }
-50% {
-    background-color: #59022B;
+
+@keyframes typewriterAnimation {
+    from {background-size:0 200%}
 }
-100% {
-    background-color: #0D0D0D;
+
+.dialog form p {
+    margin: 24px 0 8px 0;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    padding: 12px;
 }
+
+.dialog form p span {
+    color:#0000;
+    background:
+        linear-gradient(-90deg,#0000 5px,#0000 0) 10px 0,
+        linear-gradient(#00DFFC 0 0) 0 0;
+    background-size:calc(300*1ch) 200%;
+    -webkit-background-clip:padding-box,text;
+    background-clip:padding-box,text;
+    background-repeat:no-repeat;
+    animation: 
+        typewriterAnimation calc(300*.012s) steps(300) forwards;
+}
+
+.itemhighlight {
+    color:cornsilk !important;
+    font-weight: 700;
+}
+
+.dialogtitle {
+    position:absolute;
+    top:-46px;
+    font-weight:400;
+    font-family: 'Mountains of Christmas', cursive;
 }
