--- a/src/styles/dialog.css
+++ b/src/styles/dialog.css
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     /* font-family: 'Mountains of Christmas', cursive; */
-    font-family:'Kalam', sans-serif;
+    font-family:'Martel', serif;
     font-size: 1.5rem;
     /* letter-spacing: .15rem; */
     padding:10px;
@@ -66,6 +66,7 @@
     border-top: 1px solid white;
     border-bottom: 1px solid white;
     padding: 12px;
+    font-size:20px;
 }
 
 .dialog form p span {
